# kubeflow-api-auth

./: .env  Cargo.toml  Dockerfile  askama.toml  build.sh  entrypoint.sh  sqlx-data.json
containers/api-auth-db/: docker-compose.yml
containers/nginx-api-auth-test/: nginx.conf  run.sh
containers/rust-musl-builder/: .gitignore  docker-compose.yaml
frontend/: .env  .env.development  .env.production  package.json  vue.config.js
frontend/containers/kubeflow-auth-api-frontend/: docker-compose.yaml
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: TokenDetail.vue
frontend/src/components/modals/: FailureModal.vue  Modal.vue  RecaptchaV2Modal.vue  SuccessModal.vue  ViewStringWithRecaptchaModal.vue
frontend/src/components/rules/: TokenRuleLeaf.vue  TokenRuleNode.vue
frontend/src/router/: index.js
frontend/src/scss/: _variables.scss
frontend/src/store/: index.js
frontend/src/views/: Home.vue  PageNotFound.vue  TokenDetails.vue
migrations/: 20211208230215_setup_db.down.sql  20211208230215_setup_db.up.sql
src/: config.rs  main.rs  utils.rs
src/models/: api_token.rs  mod.rs
src/rules/: mod.rs  v1.rs
src/services/: mod.rs
src/services/api_key/: mod.rs
src/services/api_token/: mod.rs
src/services/check/: mod.rs
src/services/sync/: mod.rs
templates/: 401.html
tmp/: core.json  out.json
