[package]
name = "kubeflow-api-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.13"
anyhow = "1.0.51"
derive_builder = "0.10.2"
dotenv = "0.15.0"
sqlx = { version = "0.5.9", features = [ "postgres", "runtime-tokio-rustls" ] }
serde = "1.0.130"
config = "0.11.0"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
actix-files = "0.6.0-beta.9"
reqwest = { version = "0.11.7", features = ["json"] }
uuid = { version = "0.8.2", features = ["v4"] }
serde_json = "1.0.72"

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[features]

[package.metadata.x]
dev='cargo watch -x "run --bin $(basename $(pwd))"'
